support all widget fix spacing issue

--- a/openmetadata-ui/src/main/resources/ui/src/pages/TableDetailsPageV1/table-details-page-v1.less
+++ b/openmetadata-ui/src/main/resources/ui/src/pages/TableDetailsPageV1/table-details-page-v1.less
@@ -12,4 +12,5 @@
  */
 .ant-tabs-nav {
   margin: 0 !important;
+  padding: 0 20px;
 }
